<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geekband.tingyou.ui.fragment.SceneFragment">

    <LinearLayout
        android:id="@+id/classification_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:id="@+id/classifyMyCollection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/classify_my_collection"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/classifyRecentOnline"
            android:text="@string/classify_recent_online"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/classifyOnActivity"
            android:text="@string/classify_on_activity"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/classify5a"
            android:text="@string/classify_5a"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/classify4a"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/classify_4a"
            android:textSize="18sp"
            />
        </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/classification_layout"
        android:orientation="vertical"
        android:scrollbars="vertical"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/recycler_view"
        android:layout_toEndOf="@+id/recycler_view"
        android:layout_below="@+id/classification_layout"
        android:gravity="center"
        android:id="@+id/detail_recycler_view"
        />

</RelativeLayout>
