<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:orientation="horizontal"
        android:id="@+id/title_bar"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_gravity="start"
            android:text="@string/title_bar_text"
            android:textSize="30sp"
            android:gravity="center_vertical"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_search"
            android:textSize="25sp"
            android:id="@+id/search"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scene_container"
        android:layout_below="@+id/title_bar"
        android:layout_above="@+id/radio_group"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/radio_group"
        >

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/scene_button"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:text="@string/bottom_bar_scene"
            android:gravity="center"
            android:textSize="25sp"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:id="@+id/user_info_button"
            android:text="@string/bottom_bar_user_info"
            android:gravity="center"
            android:textSize="25sp"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:id="@+id/more_info_button"
            android:text="@string/bottom_bar_more_info"
            android:gravity="center"
            android:textSize="25sp"
            />

    </RadioGroup>

</RelativeLayout>
